--- a/modules/css/card.scss
+++ b/modules/css/card.scss
@@ -1,9 +1,11 @@
-div#card {
+#card_container {
   grid-column-start: 2;
   grid-row-start: 1;
   justify-self: center;
   align-self: end;
+}
 
+#card {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   display: grid;
